--- a/Report.Rmd
+++ b/Report.Rmd
@@ -19,11 +19,13 @@ data_test<-read_csv("data/data-test.csv")
 ## Introduction
 
 ```{r}
-lm.fit <- lm(R_moment_1 ~ St+ Re, data = data_train)
+lm.fit <- lm(R_moment_1 ~ St+ Re+invlogit(Fr), data = data_train)
 summary(lm.fit)
 ```
 
 ## Methodology
+
+We used an inverse-logit function to transform `Fr` due to the infinity values that exist in the data.
 
 ## Results
 
