--- a/Report.Rmd
+++ b/Report.Rmd
@@ -17,30 +17,6 @@ data_train<-read_csv("data/data-train.csv")
 data_test<-read_csv("data/data-test.csv")
 ```
 
-## EDA
-
-```{r}
-plot(data_train$R_moment_1, data_train$R_moment_2)
-plot(data_train$R_moment_1, data_train$R_moment_3)
-plot(data_train$R_moment_1, data_train$R_moment_4)
-plot(data_train$R_moment_2, data_train$R_moment_3)
-plot(data_train$R_moment_2, data_train$R_moment_4)
-plot(data_train$R_moment_3, data_train$R_moment_4)
-```
-
-```{r}
-#plot(data_train[1], data_train[2])
-?cor
-```
-
-```{r}
-# St, Re, Fr
-plot(data_train$St, data_train$Re)
-plot(data_train$St, data_train$Fr)
-plot(data_train$Re, data_train$Fr)
-```
-
-
 ## Introduction
 
 
@@ -54,6 +30,12 @@ We found that the moments are highly correlated:
 res<-cor(data_train)
 res
 corrplot(res, tl.col ="black")
+```
+
+And that they are linearly correlated:
+
+```{r}
+pairs(data_train[4:7], cex = 0.5, pch = 19)
 ```
 
 We used an inverse-logit function to transform `Fr` due to the infinity values that exist in the data.
