--- a/Report.Rmd
+++ b/Report.Rmd
@@ -10,6 +10,9 @@ require(tidyverse)
 require(rstanarm)
 require(magrittr)
 library(corrplot)
+library(glmnet)
+require(CRAN)
+library(knitr)
 ```
 
 ```{r load-data, message = FALSE}
@@ -34,14 +37,6 @@ summary(data_train$Re)
 summary(data_train$Fr)
 ```
 
-Moreover, we noticed that the gravitational acceleration has infinite values, which is problematic. Therefore, we used inverse logit transform on `Fr` to transform the infinity value into a finite value (Inf transformed to 1):
-
-```{r}
-data_train <- data_train %>%
-  mutate(Re_category = case_when(Re == 90 ~ "Low", Re==224 ~ "Medium", Re == 398 ~ "High"))%>%
-  mutate(Fr_transformed = invlogit(Fr))
-```
-
 We found that the moments are not only highly correlated,
 
 ```{r}
@@ -55,14 +50,91 @@ but that they are linearly correlated:
 ```{r}
 pairs(data_train[4:7], cex = 0.5, pch = 19)
 ```
-
 Therefore, we decided to fit a model on `R_moment_1`, which will give us the relationship of the predictor variables on the other moments due to the high linear correlation between the moments.
 
+Moreover, we noticed that the gravitational acceleration has infinite values, which is problematic. Therefore, we used inverse logit transform on `Fr` to transform the infinity value into a finite value (Inf transformed to 1):
+
 ```{r}
-lm.fit <- lm(R_moment_1 ~ St+ Re+St*Re+invlogit(Fr), data = data_train)
-summary(lm.fit)
+data_train <- data_train %>%
+  mutate(Re_category = case_when(Re == 90 ~ "Low", Re==224 ~ "Medium", Re == 398 ~ "High"))%>%
+  mutate(Fr_transformed = invlogit(Fr))
+```
+
+We then explored shrinkage methods such as ridge regression and lasso. However, since we know that the three predictors are all active so that we do not need predictor selection, so we attempted to fit a ridge regression model: 
+
+
+### Ridge Model
+
+```{r}
+y <- data_train$R_moment_1
+x <- data.matrix(data_train[, c('Re', 'St', 'Fr_transformed')])
+```
+
+```{r}
+set.seed(123)
+sample <- sample(c(TRUE, FALSE), nrow(data_train), replace=TRUE)
+train <- sample(1:nrow(x), nrow(x)/2)
+test <- (-train)
+y.test <- y[test]
+```
+
+```{r}
+
+lambda_seq = 10^seq(10, -2, length = 100)
+
+ridgemodel <- glmnet(x[train,], y[train], alpha = 0, lambda = lambda_seq)
+
+summary(ridgemodel)
+```
+
+```{r}
+set.seed(123)
+#perform k-fold cross-validation to find optimal lambda value
+cv_ridgemodel <- cv.glmnet(x[train,], y[train], alpha = 0)
+plot(cv_ridgemodel)
+```
+
+```{r}
+set.seed(123)
+#find optimal lambda value that minimizes test MSE
+best_lambda <- cv_ridgemodel$lambda.min
+best_lambda
+```
+
+```{r}
+ridge.pred <- predict(ridgemodel, s = best_lambda, newx = x[test,])
+mse <- mean((ridge.pred - y.test)^2)
+mse
+```
+
+```{r}
+out <- glmnet(x, y, alpha = 0)
+predict(out, type = 'coefficients', s = best_lambda)
+```
+
+The ridge regression we fitted through cross-validation gives us an MSE of 0.001498519
+
+```{r}
+lm.fit <- lm(R_moment_1 ~ St+ Re_category+Fr_transformed+Fr_transformed*Re_category+St*Re_category, data = data_train)
+lm_summary<-summary(lm.fit)
+lm_mse <-mean(lm_summary$residual^2)
+final_model<-lm.fit
+lm_mse
+```
+
+By fitting a simple linear regression and adding interaction terms, we obtained a model that has a MSE of 7.656106e-05, which is much smaller than the ridge regression MSE. Moreover, the model fits the data closely with $R^2$ value of 0.9727. Therefore, we decided to use this model as our final model:
+
+```{r}
+library(jtools) # Load jtools
+summ(lm.fit)
 ```
 
 ## Results
 
+```{r}
+
+```
+
 ## Conclusion
+
+
