--- a/Report.Rmd
+++ b/Report.Rmd
@@ -13,6 +13,7 @@ library(corrplot)
 library(glmnet)
 require(CRAN)
 library(knitr)
+library(caret)
 ```
 
 ```{r load-data, message = FALSE}
@@ -107,11 +108,6 @@ mse <- mean((ridge.pred - y.test)^2)
 mse
 ```
 
-```{r}
-out <- glmnet(x, y, alpha = 0)
-predict(out, type = 'coefficients', s = best_lambda)
-```
-
 The ridge regression we fitted through cross-validation gives us an MSE of 0.001498519
 
 ```{r}
@@ -143,6 +139,37 @@ summ(final_model_M3)
 summ(final_model_M4)
 ```
 
+Here we perform a 5-fold cross validation on the model.
+```{r}
+train.control <- trainControl(method = "cv", number = 5)
+
+M1_cv <- train(R_moment_1 ~ St+ Re_category+Fr_transformed+Fr_transformed*Re_category+St*Re_category, data = data_train, method = "lm", trControl = train.control)
+print(M1_cv)
+```
+
+```{r, warning=FALSE}
+M2_cv <- train(R_moment_2 ~ St+Re_category+Fr_category+Fr_category*Re_category+St*Re_category, data = data_train, method = "lm", trControl = train.control)
+M3_cv <- train(R_moment_3 ~ St+Re_category+Fr_category+Fr_category*Re_category+St*Re_category, data = data_train, method = "lm", trControl = train.control)
+M4_cv <- train(R_moment_4 ~ St+Re_category+Fr_category+Fr_category*Re_category+St*Re_category, data = data_train, method = "lm", trControl = train.control)
+print(M2_cv)
+print(M3_cv)
+print(M4_cv)
+```
+```{r}
+library(knitr)
+M1_metrics <- M1_cv$results %>% select(c("RMSE", "Rsquared", "MAE"))
+M2_metrics <- M2_cv$results %>% select(c("RMSE", "Rsquared", "MAE"))
+M3_metrics <- M3_cv$results %>% select(c("RMSE", "Rsquared", "MAE"))
+M4_metrics <- M4_cv$results %>% select(c("RMSE", "Rsquared", "MAE"))
+
+cv_df <- merge(M1_metrics, M2_metrics, by=c("RMSE", "Rsquared", "MAE"), all = TRUE)
+cv_df2 <- merge(cv_df, M3_metrics, by=c("RMSE", "Rsquared", "MAE"), all = TRUE)
+total_cv <- merge(cv_df2, M4_metrics, by=c("RMSE", "Rsquared", "MAE"), all = TRUE)
+total_cv <- total_cv %>% mutate(Model = c('M1', 'M2', 'M3', 'M4')) %>% relocate(Model, .before = RMSE)
+total_cv %>% kable(digits = 3)
+
+```
+
 ## Results
 We made predictions on the hold-out set in data-test.csv, and generated a csv file containing the predictions for the first, second, third and fourth moments.
 
@@ -158,8 +185,18 @@ data_test_transformed <- data_test %>%
 
 data_predicted_output <- data_test_transformed%>%select(St, Re, Fr, Predicted_M1, Predicted_M2, Predicted_M3, Predicted_M4)
 write.csv(data_predicted_output,"data-predict.csv", row.names = FALSE)
+data_predicted_output %>% kable(digits = 5)
 ```
 
+Major observations from the results:
+
+- 
+
+results section discussing your predictive results (don’t forget uncertainty!), as
+well as insights on the scientific problem.
+
 ## Conclusion
+
+
 
 
